# maxpool-add

./: .gitignore  CMakeLists.txt  batch_test.sh  fused_graph.hpp  fused_op.hpp  generate_test_case.py  main.cpp  max_pool_add.hpp  max_pool_add.hpp.backup  quickstart.sh  tensor.hpp  test.sh  testcase
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  fused_op-checkpoint.hpp  fused_op.hpp-checkpoint.backup  generate_report-checkpoint.py  main-checkpoint.cpp  max_pool_add-checkpoint.hpp  tensor-checkpoint.hpp
report_old/: mpa_avx_large.txt  mpa_avx_mid.txt  mpa_avx_small.txt  mpa_large.txt  mpa_mid.txt  mpa_omp_avx_large.txt  mpa_omp_avx_mid.txt  mpa_omp_avx_small.txt  mpa_omp_large.txt  mpa_omp_mid.txt  mpa_omp_small.txt  mpa_small.txt
report_old/.ipynb_checkpoints/: mpa_large-checkpoint.txt  mpa_omp_large-checkpoint.txt
